# swallowloop

./: .env.example  .env.template  .env_template  .gitignore  .gitmodules  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  run.sh  test_speckit.py
.claude/agents/: architect.md  backend-dev.md  frontend-dev.md  reviewer.md  tester.md
.claude/skills/architecture-design/: SKILL.md
.claude/skills/setup/: SKILL.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
deerflow_data/: docker-compose-dev.yaml  extensions_config.json  run_deerflow.sh
deerflow_data/nginx/: nginx.conf
docs/: CODING_STANDARDS.md  GLOSSARY.md  architecture.md  data_models.md  test_scenarios.md  vision.md
docs/lessons/: 001-testing-strategy.md  002-state-machine-design.md  README.md
docs/superpowers/plans/: 2026-03-20-issue-pipeline-implementation.md  2026-03-26-stage-state-machine-implementation.md
docs/superpowers/specs/: 2026-03-20-issue-pipeline-design.md  2026-03-26-stage-state-machine-design.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx
frontend/src/lib/: api.ts  wsClient.ts
frontend/src/pages/: Archive.tsx  (+5 more)
scripts/: deerflow.sh
specs/001-sdd-stage-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/swallowloop/: __init__.py  __main__.py  config.py  fibonacci.py  github_client.py  main.py  models.py  orchestrator.py  task_manager.py  worker.py  workspace_manager.py
tests/: __init__.py  conftest.py  test_calculator.py  test_comment_revision.py  test_concurrency.py  test_dashboard.py  test_dict_utils.py  test_e2e_scenarios.py  test_issue_api.py  test_issue_scanning.py  test_issue_service.py  test_json_issue_repository.py  test_list_utils.py  test_mock_agent.py  test_pr_submission.py  test_self_update.py  test_set_utils.py  test_string_utils.py  test_task_lifecycle.py  test_task_retry_abort.py  test_workspace_assignment.py
tests/e2e/: __init__.py  test_deerflow_integration.py  test_full_lifecycle.py
tests/helpers/: __init__.py  mock_executor.py  mock_repository.py
tests/integration/: __init__.py  test_api_with_service.py  test_json_persistence.py  test_service_with_repo.py
(+209 files in other folders)
