[project]
name = "swallowloop"
version = "0.1.0"
description = "SwallowLoop - 燕子回环：围绕代码仓的智能维护Agent"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "iflow-cli-sdk>=0.1.11",
    "psutil>=6.1.0",
    "pygithub>=2.8.1",
    "transitions>=0.9.3",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
swallowloop = "swallowloop.main:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/swallowloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"